--- a/overrides/partials/comments.html
+++ b/overrides/partials/comments.html
@@ -1,10 +1,10 @@
-{% if page.meta.comments %}
+{% if true %}
 <h2 id="__comments">{{ lang.t("meta.comments") }}</h2>
 <!-- Insert generated snippet here -->
 <script src="https://giscus.app/client.js" data-repo="Panxuc/docs" data-repo-id="R_kgDOKAyWpw"
 	data-category="Announcements" data-category-id="DIC_kwDOKAyWp84CYQ4_" data-mapping="pathname" data-strict="0"
 	data-reactions-enabled="1" data-emit-metadata="0" data-input-position="top" data-theme="preferred_color_scheme"
-	data-lang="en" data-loading="lazy" crossorigin="anonymous" async>
+	data-lang="zh-CN" data-loading="lazy" crossorigin="anonymous" async>
 	</script>
 
 <!-- Synchronize Giscus theme with palette -->
